GNOME Bugzilla – Bug 698177
Login history: g_array_free: assertion `array' failed
Last modified: 2013-04-17 08:03:18 UTC
I get this critical when showing login history for a user that has never logged in (in this case also an enterprise login): (gnome-control-center:21901): GLib-CRITICAL **: g_array_free: assertion `array' failed
+ Trace 231806
This is gnome-control-center 3.8.0-3 in Fedora 19
Created attachment 241714 [details] [review] user-accounts: Fix assertion from freeing NULL array
Patch tested on gnome-3-8
Review of attachment 241714 [details] [review]: Looks good to commit to master and gnome-3-8
Attachment 241714 [details] pushed as 264c2fc - user-accounts: Fix assertion from freeing NULL array Also pushed to gnome-3-8 branch