user-accounts: Fix assertion from freeing NULL array

https://bugzilla.gnome.org/show_bug.cgi?id=698177